test/src/errors/events/unhandled-exception.event.ts
export class UnhandledExceptionEvent {
  constructor(public readonly failAt: 'command' | 'event' | 'saga') {}
}
